fix: make package breadcrumbs navigable
